# design_studio

./: .gitignore  CLAUDE.md  README.md  package.json  tsconfig.json  vite.config.ts
core/: CMakeLists.txt
core/include/: studio_engine.h
core/src/: studio_engine.cpp
frontend/: index.html
frontend/public/: DesignStudioModule.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/engine/: DesignEngine.ts
scripts/: build-wasm.sh
